// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App/> (Snapshot Test Dashboard form snapshot test 1`] = `
Array [
  <form
    onSubmit={[Function]}
  >
    <label>
      TITLE
    </label>
    <input
      id="title"
      onChange={[Function]}
      type="text"
    />
    <label>
      NOTE
    </label>
    <input
      id="content"
      onChange={[Function]}
      type="text"
    />
    <input
      type="submit"
    />
  </form>,
  <ul />,
]
`;

exports[`<App/> (Snapshot Test Note create form snapshot test 1`] = `
<form>
  <label>
    TITLE
  </label>
  <input
    id="title"
    type="text"
  />
  <label>
    NOTE
  </label>
  <input
    id="content"
    type="text"
  />
  <input
    type="submit"
  />
</form>
`;

exports[`<App/> (Snapshot Test renders 1`] = `
Array [
  <nav>
    <ul>
      <li>
        <a
          aria-current="page"
          className="active"
          href="/"
          onClick={[Function]}
          style={Object {}}
        >
          HOME
        </a>
      </li>
      <li>
        <a
          aria-current={null}
          href="/dashboard"
          onClick={[Function]}
        >
          DASHBOARD
        </a>
      </li>
    </ul>
  </nav>,
  <main>
    <h2>
      Welcome to the Notes
    </h2>
    <p>
      Add notes to this app! delete them if you get sick of them! its fun!
    </p>
    <p>
      click the dashboard to get startedddd
    </p>
  </main>,
]
`;
